commit some code